--- a/Demos/Extenders/Wisej.DemoBrowser.ErrorProvider/Wisej.DemoBrowser.ErrorProvider.csproj
+++ b/Demos/Extenders/Wisej.DemoBrowser.ErrorProvider/Wisej.DemoBrowser.ErrorProvider.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B5225083-8DE7-4F3E-9E77-AEE33C3676A8}</ProjectGuid>
+    <ProjectGuid>{F8618041-35DF-4D06-872D-4498AAE89558}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Wisej.DemoBrowser.Animation</RootNamespace>
-    <AssemblyName>Wisej.DemoBrowser.Animation</AssemblyName>
+    <RootNamespace>Wisej.DemoBrowser.ErrorProvider</RootNamespace>
+    <AssemblyName>Wisej.DemoBrowser.ErrorProvider</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -51,15 +51,15 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Wisej.DemoBrowser.Common\Wisej.DemoBrowser.Common.csproj">
+      <Project>{1F0B2E9E-6624-4DB8-810F-48A7BC531A29}</Project>
+      <Name>Wisej.DemoBrowser.Common</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
     <EmbeddedResource Include="Features.resx">
       <DependentUpon>Features.cs</DependentUpon>
     </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\Wisej.DemoBrowser.Common\Wisej.DemoBrowser.Common.csproj">
-      <Project>{1f0b2e9e-6624-4db8-810f-48a7bc531a29}</Project>
-      <Name>Wisej.DemoBrowser.Common</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
