--- a/Demos/Extensions/Wisej.DemoBrowser.JustGage/Wisej.DemoBrowser.JustGage.csproj
+++ b/Demos/Extensions/Wisej.DemoBrowser.JustGage/Wisej.DemoBrowser.JustGage.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9B550D24-C109-40B3-AFD0-7318B63833A4}</ProjectGuid>
+    <ProjectGuid>{A3B264AE-23ED-40FA-92C5-85C4CBC17B73}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Wisej.DemoBrowser.jSequence</RootNamespace>
-    <AssemblyName>Wisej.DemoBrowser.jSequence</AssemblyName>
+    <RootNamespace>Wisej.DemoBrowser.JustGage</RootNamespace>
+    <AssemblyName>Wisej.DemoBrowser.JustGage</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -56,7 +56,7 @@
     <PackageReference Include="Wisej-2">
       <Version>2.5.*-*</Version>
     </PackageReference>
-    <PackageReference Include="Wisej-2-jSequence">
+    <PackageReference Include="Wisej-2-JustGage">
       <Version>2.5.*-*</Version>
     </PackageReference>
   </ItemGroup>
