--- a/Wisej.DemoBrowser.Common/Wisej.DemoBrowser.Common.csproj
+++ b/Wisej.DemoBrowser.Common/Wisej.DemoBrowser.Common.csproj
@@ -67,6 +67,7 @@
       <Version>2.5.*-*</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
