--- a/Demos/Grids/Wisej.DemoBrowser.PropertyGrid/Wisej.DemoBrowser.PropertyGrid.csproj
+++ b/Demos/Grids/Wisej.DemoBrowser.PropertyGrid/Wisej.DemoBrowser.PropertyGrid.csproj
@@ -80,5 +80,6 @@
   <ItemGroup>
     <EmbeddedResource Include="wisej.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
