--- a/Demos/Containers/Wisej.DemoBrowser.TableLayoutPanel/Wisej.DemoBrowser.TableLayoutPanel.csproj
+++ b/Demos/Containers/Wisej.DemoBrowser.TableLayoutPanel/Wisej.DemoBrowser.TableLayoutPanel.csproj
@@ -50,7 +50,7 @@
       <Version>2.5.*-*</Version>
     </PackageReference>
     <PackageReference Include="Wisej-2-ChartJS3">
-      <Version>2.5.26</Version>
+      <Version>2.5.*-*</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
