--- a/Demos/Extensions/Wisej.DemoBrowser.Speech/Wisej.DemoBrowser.Speech.csproj
+++ b/Demos/Extensions/Wisej.DemoBrowser.Speech/Wisej.DemoBrowser.Speech.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{22A73A18-38EB-4E50-ABE3-BBFED2705EB7}</ProjectGuid>
+    <ProjectGuid>{55AA5696-9B5C-4C20-82B3-6B263D6C32F4}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Wisej.DemoBrowser.Html2Canvas</RootNamespace>
-    <AssemblyName>Wisej.DemoBrowser.Html2Canvas</AssemblyName>
+    <RootNamespace>Wisej.DemoBrowser.Speech</RootNamespace>
+    <AssemblyName>Wisej.DemoBrowser.Speech</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -47,29 +47,29 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Wisej-2">
-      <Version>2.5.*-*</Version>
-    </PackageReference>
-    <PackageReference Include="Wisej-2-ChartJS">
-      <Version>2.5.*-*</Version>
-    </PackageReference>
-    <PackageReference Include="Wisej-2-Html2Canvas">
-      <Version>2.5.*-*</Version>
-    </PackageReference>
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\..\..\Wisej.DemoBrowser.Common\Wisej.DemoBrowser.Common.csproj">
       <Project>{1f0b2e9e-6624-4db8-810f-48a7bc531a29}</Project>
       <Name>Wisej.DemoBrowser.Common</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Wisej-2">
+      <Version>2.5.*-*</Version>
+    </PackageReference>
+    <PackageReference Include="Wisej-2-Speech">
+      <Version>2.5.*-*</Version>
+    </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
     <EmbeddedResource Include="Features.resx">
       <DependentUpon>Features.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <EmbeddedResource Include="Images\dummy-logo.png" />
+    <EmbeddedResource Include="Images\record.png" />
+    <EmbeddedResource Include="Images\play.png" />
+    <EmbeddedResource Include="Images\stop.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
