--- a/Demos/Extensions/Wisej.DemoBrowser.JustGage/Wisej.DemoBrowser.JustGage.csproj
+++ b/Demos/Extensions/Wisej.DemoBrowser.JustGage/Wisej.DemoBrowser.JustGage.csproj
@@ -65,5 +65,8 @@
       <DependentUpon>Features.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Images\ColorPicker.svg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
