--- a/Wisej.DemoBrowser/Wisej.DemoBrowser.csproj
+++ b/Wisej.DemoBrowser/Wisej.DemoBrowser.csproj
@@ -50,6 +50,7 @@
     <EmbeddedResource Include="Themes\DemoBrowser.mixin.theme" />
     <Content Include="DemoBrowser.json" />
     <EmbeddedResource Include="Themes\IconsListView.mixin.theme" />
+    <EmbeddedResource Include="Themes\RibbonBar.mixin.theme" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
