Cleaning the PropertyGrid demo and adding a custom editor (as suggested by Luca)

--- a/Demos/Grids/Wisej.DemoBrowser.PropertyGrid/Wisej.DemoBrowser.PropertyGrid.csproj
+++ b/Demos/Grids/Wisej.DemoBrowser.PropertyGrid/Wisej.DemoBrowser.PropertyGrid.csproj
@@ -37,6 +37,7 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ColorPicker.cs" />
     <Compile Include="Features.cs">
       <SubType>UserControl</SubType>
     </Compile>
