--- a/Demos/Extensions/Wisej.DemoBrowser.ChartJS/Wisej.DemoBrowser.ChartJS.csproj
+++ b/Demos/Extensions/Wisej.DemoBrowser.ChartJS/Wisej.DemoBrowser.ChartJS.csproj
@@ -44,6 +44,12 @@
       <DependentUpon>Features.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scatter.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Scatter.Designer.cs">
+      <DependentUpon>Scatter.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\Wisej.DemoBrowser.Common\Wisej.DemoBrowser.Common.csproj">
@@ -62,6 +68,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Features.resx">
       <DependentUpon>Features.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Scatter.resx">
+      <DependentUpon>Scatter.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
