--- a/Demos/ToolsAndMenus/Wisej.DemoBrowser.EmbeddedTools/Wisej.DemoBrowser.EmbeddedTools.csproj
+++ b/Demos/ToolsAndMenus/Wisej.DemoBrowser.EmbeddedTools/Wisej.DemoBrowser.EmbeddedTools.csproj
@@ -47,7 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Wisej-2">
-      <Version>2.5.30-test.4</Version>
+      <Version>2.5.*-*</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
