--- a/Demos/Extensions/Wisej.DemoBrowser.ChartJS/Wisej.DemoBrowser.ChartJS.csproj
+++ b/Demos/Extensions/Wisej.DemoBrowser.ChartJS/Wisej.DemoBrowser.ChartJS.csproj
@@ -106,6 +106,9 @@
     <PackageReference Include="Wisej-2-ChartJS">
       <Version>2.5.*-*</Version>
     </PackageReference>
+    <PackageReference Include="Wisej-2-ChartJS3">
+      <Version>2.5.29</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Line.resx">
