--- a/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Syncfusion.Demo/Wisej.Web.Ext.Syncfusion.Demo.csproj
+++ b/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Syncfusion.Demo/Wisej.Web.Ext.Syncfusion.Demo.csproj
@@ -619,9 +619,8 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms" />
-    <Reference Include="Wisej.Web.Ext.Syncfusion, Version=2.0.0.0, Culture=neutral, PublicKeyToken=653fbd0440795259, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\Wisej\Extensions\Premium\2.5\Wisej.Web.Ext.Syncfusion\Wisej.Web.Ext.Syncfusion\bin\Debug\Wisej.Web.Ext.Syncfusion.dll</HintPath>
+    <Reference Include="Wisej.Web.Ext.Syncfusion">
+      <HintPath>..\..\..\..\..\..\Wisej\Extensions\Premium\2.5\bin\Wisej.Web.Ext.Syncfusion.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
