--- a/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Webix.Demo/Wisej.Web.Ext.Webix.Demo.csproj
+++ b/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Webix.Demo/Wisej.Web.Ext.Webix.Demo.csproj
@@ -58,6 +58,33 @@
     <EmbeddedResource Include="Component\ColorPicker.resx">
       <DependentUpon>ColorPicker.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Component\Diagram.resx">
+      <DependentUpon>Diagram.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Component\DocumentManager.resx">
+      <DependentUpon>DocumentManager.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Component\Gantt.resx">
+      <DependentUpon>Gantt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Component\Kanban.resx">
+      <DependentUpon>Kanban.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Component\Pivot.resx">
+      <DependentUpon>Pivot.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Component\Query.resx">
+      <DependentUpon>Query.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Component\ReportManager.resx">
+      <DependentUpon>ReportManager.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Component\Scheduler.resx">
+      <DependentUpon>Scheduler.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Component\Spreadsheet.resx">
+      <DependentUpon>Spreadsheet.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Component\TimeBoard.resx">
       <DependentUpon>TimeBoard.cs</DependentUpon>
     </EmbeddedResource>
@@ -73,7 +100,12 @@
     <EmbeddedResource Include="Component\UnitList.resx">
       <DependentUpon>UnitList.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Component\UserManager.resx">
+      <DependentUpon>UserManager.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Themes\Webix.mixin.theme" />
+    <Content Include="Data\data.xlsx" />
+    <Content Include="Data\Wisej-Datasheet-V2.2.pdf" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -146,6 +178,18 @@
     <Compile Include="Component\DateRange.Designer.cs">
       <DependentUpon>DateRange.cs</DependentUpon>
     </Compile>
+    <Compile Include="Component\Diagram.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Component\Diagram.Designer.cs">
+      <DependentUpon>Diagram.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Component\DocumentManager.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Component\DocumentManager.Designer.cs">
+      <DependentUpon>DocumentManager.cs</DependentUpon>
+    </Compile>
     <Compile Include="Component\ExcelViewer.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -164,6 +208,12 @@
     <Compile Include="Component\Gage.Designer.cs">
       <DependentUpon>Gage.cs</DependentUpon>
     </Compile>
+    <Compile Include="Component\Gantt.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Component\Gantt.Designer.cs">
+      <DependentUpon>Gantt.cs</DependentUpon>
+    </Compile>
     <Compile Include="Component\GeoChart.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -176,11 +226,29 @@
     <Compile Include="Component\GroupList.Designer.cs">
       <DependentUpon>GroupList.cs</DependentUpon>
     </Compile>
+    <Compile Include="Component\Kanban.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Component\Kanban.Designer.cs">
+      <DependentUpon>Kanban.cs</DependentUpon>
+    </Compile>
     <Compile Include="Component\PDFViewer.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Component\PDFViewer.Designer.cs">
       <DependentUpon>PDFViewer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Component\Pivot.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Component\Pivot.Designer.cs">
+      <DependentUpon>Pivot.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Component\Query.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Component\Query.Designer.cs">
+      <DependentUpon>Query.cs</DependentUpon>
     </Compile>
     <Compile Include="Component\RangeChart.cs">
       <SubType>UserControl</SubType>
@@ -188,17 +256,29 @@
     <Compile Include="Component\RangeChart.Designer.cs">
       <DependentUpon>RangeChart.cs</DependentUpon>
     </Compile>
+    <Compile Include="Component\ReportManager.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Component\ReportManager.Designer.cs">
+      <DependentUpon>ReportManager.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Component\Scheduler.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Component\Scheduler.Designer.cs">
+      <DependentUpon>Scheduler.cs</DependentUpon>
+    </Compile>
     <Compile Include="Component\Sidebar.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Component\Sidebar.Designer.cs">
       <DependentUpon>Sidebar.cs</DependentUpon>
     </Compile>
-    <Compile Include="Component\SideMenu.cs">
+    <Compile Include="Component\Spreadsheet.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Component\SideMenu.Designer.cs">
-      <DependentUpon>SideMenu.cs</DependentUpon>
+    <Compile Include="Component\Spreadsheet.Designer.cs">
+      <DependentUpon>Spreadsheet.cs</DependentUpon>
     </Compile>
     <Compile Include="Component\TimeBoard.cs">
       <SubType>UserControl</SubType>
@@ -236,6 +316,12 @@
     <Compile Include="Component\UnitList.Designer.cs">
       <DependentUpon>UnitList.cs</DependentUpon>
     </Compile>
+    <Compile Include="Component\UserManager.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Component\UserManager.Designer.cs">
+      <DependentUpon>UserManager.cs</DependentUpon>
+    </Compile>
     <Compile Include="Component\ViewBase.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -251,7 +337,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Wisej.Web.Ext.DevExtreme.Demo\Wisej.Web.Ext.DevExtreme.Demo.csproj">
+      <Project>{3CF70E34-BB81-4D95-83CF-972ECCF063E0}</Project>
+      <Name>Wisej.Web.Ext.DevExtreme.Demo</Name>
+    </ProjectReference>
+  </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
@@ -262,6 +353,9 @@
     <Reference Include="Wisej.Framework, Version=2.0.0.0, Culture=neutral, PublicKeyToken=17bef35e11b84171, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\Wisej\Development\2.5\bin\Wisej.Framework.dll</HintPath>
+    </Reference>
+    <Reference Include="Wisej.Web.Ext.DevExtreme">
+      <HintPath>..\..\..\..\..\..\Wisej\Extensions\Premium\2.5\bin\Wisej.Web.Ext.DevExtreme.dll</HintPath>
     </Reference>
     <Reference Include="Wisej.Web.Ext.Webix">
       <HintPath>..\..\..\..\..\..\Wisej\Extensions\Premium\2.5\bin\Wisej.Web.Ext.Webix.dll</HintPath>
@@ -315,9 +409,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Component\Sidebar.resx">
       <DependentUpon>Sidebar.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Component\SideMenu.resx">
-      <DependentUpon>SideMenu.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Component\Tree.resx">
       <DependentUpon>Tree.cs</DependentUpon>
