--- a/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.DevExtreme.Demo/Wisej.Web.Ext.DevExtreme.Demo.csproj
+++ b/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.DevExtreme.Demo/Wisej.Web.Ext.DevExtreme.Demo.csproj
@@ -199,6 +199,7 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+    <Content Include="Wisej.Web.Ext.DevExtreme.json" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Images\devextreme.png" />
@@ -478,10 +479,10 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Wisej-2">
-      <Version>2.5.*</Version>
+      <Version>2.5.*-*</Version>
     </PackageReference>
     <PackageReference Include="Wisej-2-MaterialDesign">
-      <Version>2.5.*</Version>
+      <Version>2.5.*-*</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
