--- a/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Ignite.Demo/Wisej.Web.Ext.Ignite.Demo.csproj
+++ b/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Ignite.Demo/Wisej.Web.Ext.Ignite.Demo.csproj
@@ -117,6 +117,7 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+    <Content Include="Wisej.Web.Ext.Ignite.json" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Images\HtmlEditor\ig-html-editor-shutterstock.jpg" />
@@ -350,7 +351,11 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <PackageReference Include="Wisej-2">
+      <Version>2.5.31-test.1</Version>
+    </PackageReference>
+  </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
@@ -358,11 +363,14 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms" />
-    <Reference Include="Wisej.Framework">
-      <HintPath>..\..\..\..\..\..\Wisej\Development\2.5\bin\Wisej.Framework.dll</HintPath>
+    <Reference Include="Telerik.Web.Captcha">
+      <HintPath>C:\Users\llruf\.nuget\packages\telerik.web.captcha.trial\1.0.0\lib\net40\Telerik.Web.Captcha.dll</HintPath>
     </Reference>
     <Reference Include="Wisej.Web.Ext.Ignite">
       <HintPath>..\..\..\..\..\..\Wisej\Extensions\Premium\2.5\bin\Wisej.Web.Ext.Ignite.dll</HintPath>
+    </Reference>
+    <Reference Include="Wisej.Web.Ext.Kendo">
+      <HintPath>..\..\..\..\..\..\Wisej\Extensions\Premium\2.5\bin\Wisej.Web.Ext.Kendo.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -409,6 +417,12 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Wisej.Web.Ext.Kendo.Demo\Wisej.Web.Ext.Kendo.Demo.csproj">
+      <Project>{8C552CA9-4468-491A-AB7E-0B2BF8711536}</Project>
+      <Name>Wisej.Web.Ext.Kendo.Demo</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
