--- a/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Kendo.Demo/Wisej.Web.Ext.Kendo.Demo.csproj
+++ b/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Kendo.Demo/Wisej.Web.Ext.Kendo.Demo.csproj
@@ -598,10 +598,10 @@
       <Version>1.0.0</Version>
     </PackageReference>
     <PackageReference Include="Wisej-2">
-      <Version>2.5.18-rc</Version>
+        <Version>2.5.*-*</Version>
     </PackageReference>
     <PackageReference Include="Wisej-2-MaterialDesign">
-      <Version>2.5.16</Version>
+        <Version>2.5.*-*</Version>
     </PackageReference>
   </ItemGroup>
   <PropertyGroup>
