--- a/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Ignite.Demo/Wisej.Web.Ext.Ignite.Demo.csproj
+++ b/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Ignite.Demo/Wisej.Web.Ext.Ignite.Demo.csproj
@@ -117,7 +117,7 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
-    <Content Include="Wisej.Web.Ext.Ignite.json" />
+    <EmbeddedResource Include="Wisej.Web.Ext.Ignite.json" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Images\HtmlEditor\ig-html-editor-shutterstock.jpg" />
@@ -352,12 +352,12 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-	  <PackageReference Include="Wisej-2">
-		  <Version>2.5.*-*</Version>
-	  </PackageReference>
-	  <PackageReference Include="Wisej-2-MaterialDesign">
-		  <Version>2.5.*-*</Version>
-	  </PackageReference>
+    <PackageReference Include="Wisej-2">
+      <Version>2.5.*-*</Version>
+    </PackageReference>
+    <PackageReference Include="Wisej-2-MaterialDesign">
+      <Version>2.5.*-*</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
