--- a/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Syncfusion.Demo/Wisej.Web.Ext.Syncfusion.Demo.csproj
+++ b/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Syncfusion.Demo/Wisej.Web.Ext.Syncfusion.Demo.csproj
@@ -211,7 +211,7 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
-    <Content Include="Wisej.Web.Ext.Syncfusion.json" />
+    <EmbeddedResource Include="Wisej.Web.Ext.Syncfusion.json" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Images\bird.jpg" />
