--- a/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.DevExtreme.Demo/Wisej.Web.Ext.DevExtreme.Demo.csproj
+++ b/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.DevExtreme.Demo/Wisej.Web.Ext.DevExtreme.Demo.csproj
@@ -193,7 +193,6 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
-    <EmbeddedResource Include="Wisej.Web.Ext.DevExtreme.json" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Images\devextreme.png" />
@@ -463,6 +462,9 @@
     <PackageReference Include="Wisej-2">
       <Version>2.5.*-*</Version>
     </PackageReference>
+    <PackageReference Include="Wisej-2-DevExtreme">
+      <Version>2.5.30-test.1</Version>
+    </PackageReference>
     <PackageReference Include="Wisej-2-MaterialDesign">
       <Version>2.5.*-*</Version>
     </PackageReference>
@@ -480,9 +482,6 @@
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
-    <Reference Include="Wisej.Web.Ext.DevExtreme">
-      <HintPath>..\..\..\..\..\..\Wisej\Extensions\Premium\2.5\bin\Wisej.Web.Ext.DevExtreme.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="MainView.resx">
